transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      securityContext:
        runAsUser: 1001
      containers:
        - name: transmission
          image: linuxserver/transmission:4.0.2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 250Mi
            limits:
              cpu: 100m
              memory: 300Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 9091
          volumeMounts:
            - name: transmission-config
              mountPath: /config
            - name: transmission-downloads
              mountPath: /downloads
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 2
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config-pvc
        - name: transmission-downloads
          persistentVolumeClaim:
            claimName: transmission-downloads-pvc
