transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission
  name: transmission
spec:
  ipFamilyPolicy: PreferDualStack
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9091
      targetPort: http
  selector:
    app: transmission
